[gd_scene load_steps=6 format=3 uid="uid://m160lv3fj4xv"]

[ext_resource type="Script" path="res://UI/artifact_ui.gd" id="1_qe6fs"]
[ext_resource type="Texture2D" uid="uid://t7aahp6vj36j" path="res://Artifacts/book-artefact-REAL.png" id="2_tc8ec"]
[ext_resource type="Texture2D" uid="uid://dnh5unqr3ld3o" path="res://Artifacts/bracelet-artefact.png" id="3_g2hfj"]
[ext_resource type="Texture2D" uid="uid://cx2eoh7raoh4" path="res://Artifacts/skibur-cube-artifact.png" id="4_k77n2"]
[ext_resource type="Texture2D" uid="uid://cbo3n60ejy0dj" path="res://Artifacts/key-artifact.png" id="5_bvlt1"]

[node name="ArtifactUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qe6fs")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 0
offset_right = 164.0
offset_bottom = 32.0

[node name="Artifact1" type="TextureRect" parent="HSplitContainer"]
layout_mode = 2
texture = ExtResource("2_tc8ec")
stretch_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="Artifact2" type="TextureRect" parent="HSplitContainer/HSplitContainer"]
layout_mode = 2
texture = ExtResource("3_g2hfj")
stretch_mode = 2

[node name="HSplitContainer2" type="HSplitContainer" parent="HSplitContainer/HSplitContainer"]
layout_mode = 2

[node name="Artifact3" type="TextureRect" parent="HSplitContainer/HSplitContainer/HSplitContainer2"]
layout_mode = 2
texture = ExtResource("4_k77n2")
stretch_mode = 2

[node name="Artifact4" type="TextureRect" parent="HSplitContainer/HSplitContainer/HSplitContainer2"]
layout_mode = 2
texture = ExtResource("5_bvlt1")
stretch_mode = 2
